demo/server.yaml
apiVersion: v1
kind: Pod
metadata:
  name: server
spec:
   containers:
    - name: server
      image: gcr.io/google-samples/node-hello:1.0
      ports:
       - containerPort: 8080
         protocol: TCP
   #nodeSelector:
    #app: server
